# make-money

./: .env.example  .env.server.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  border-radius:12px  docker-compose.server.yml  pyproject.toml  setup.py  themes.yml
.github/workflows/: daily-brief.yml
config/: ghost.yml  quality_rules.yaml  runtime.yaml  universe.yaml
docs/: fmp-api-endpoints.md  ghost-setup-checklist.md  v4_content_spec.md
prompts/: OPTIMIZATION_V2_ADDENDUM.md  daily_brief.prompt.txt  enhance_post.prompt.txt  postA.prompt.md  postB.prompt.md  postC.prompt.md  postD.prompt.md  quality_rules.prompt.md  social_teaser.prompt.md
qa/: gates.md
schemas/: fact_pack.schema.json  post.schema.json  postA.schema.json  postB.schema.json  postC.schema.json  postD.schema.json  research_pack.schema.json
scripts/: deploy-server.sh  enhance_post.py  ghost_publish_safe.py  ghost_smoke_test.py  iterate_with_chatgpt.py  metrics_rollup.py  publish_v2_posts.py  publish_v3_posts.py  rerun_post.sh  rerun_today.sh  run_daily_draft.sh  run_daily_prod.sh  test_models.py
src/: __init__.py  app.py
src/analyzers/: __init__.py  event_scoring.py  peer_comp.py  research_pack_builder.py  valuation_models.py
src/collectors/: __init__.py  google_news_rss.py  radar_fillers.py
src/enrichers/: __init__.py  alpha_vantage.py  base.py  fill_nulls.py  fmp.py
src/pipeline/: __init__.py  (+4 more)
templates/: post_deep_v4.html  post_earnings_v4.html  post_flash_v4.html
tests/: __init__.py  test_analyzers.py  test_collectors.py  test_enrichers.py  test_utils.py
(+66 files in other folders)
